MNT: apply changes from new pre-commit config (add codespell, use ruff only)

--- a/examples/log_display/log_display.ui
+++ b/examples/log_display/log_display.ui
@@ -23,7 +23,7 @@
       <string>
     Standard display for Log Output
 
-    This widget handles instantating a ``GuiHandler`` and displaying log
+    This widget handles instantiating a ``GuiHandler`` and displaying log
     messages to a ``QPlainTextEdit``. The level of the log can be changed from
     inside the widget itself, allowing users to select from any of the
     ``.levels`` specified by the widget.
