--- a/examples/template_repeater/magnet-list-item.ui
+++ b/examples/template_repeater/magnet-list-item.ui
@@ -245,7 +245,7 @@
 
 
     relative : bool, optional
-        Choice to have the button peform a relative put, instead of always
+        Choice to have the button perform a relative put, instead of always
         setting to an absolute value
     </string>
      </property>
@@ -299,7 +299,7 @@
 
 
     relative : bool, optional
-        Choice to have the button peform a relative put, instead of always
+        Choice to have the button perform a relative put, instead of always
         setting to an absolute value
     </string>
      </property>
@@ -413,7 +413,7 @@
 
 
     relative : bool, optional
-        Choice to have the button peform a relative put, instead of always
+        Choice to have the button perform a relative put, instead of always
         setting to an absolute value
     </string>
      </property>
