--- a/pydm/tests/test_data/template.ui
+++ b/pydm/tests/test_data/template.ui
@@ -242,7 +242,7 @@
 
 
     relative : bool, optional
-        Choice to have the button peform a relative put, instead of always
+        Choice to have the button perform a relative put, instead of always
         setting to an absolute value
     </string>
      </property>
@@ -296,7 +296,7 @@
 
 
     relative : bool, optional
-        Choice to have the button peform a relative put, instead of always
+        Choice to have the button perform a relative put, instead of always
         setting to an absolute value
     </string>
      </property>
@@ -410,7 +410,7 @@
 
 
     relative : bool, optional
-        Choice to have the button peform a relative put, instead of always
+        Choice to have the button perform a relative put, instead of always
         setting to an absolute value
     </string>
      </property>
